# mle-training

./: .gitignore  README.md  env.yml  my_unix_session  nonstandardcode.py  pyproject.toml  requirements.txt  setup.py  testsetup.py
artifacts/: DECISION_TREE_1.pkl  Decision_Tree.pkl  LINEAR_REGRESSION_1.pkl  Linear_Regression.pkl  imputer.pickle
data/datasets/housing/: imputer.pickle
data/datasets/housing/processed/: training_set.csv
deploy/: env.yml  requirements.txt  sample.yml
deploy/conda/: env.yml  requirements.txt
docs/: conf.py  index.rst  src.rst
docs/source/: conf.py  index.rst
notebooks/: houseprice1.ipynb  houseprice_exercise.ipynb
src/: config.py  config.yml  ingest_data.py  log_config.py  mlflowdriver.py  my_git_session  my_miniconda_session  nonstandardcode.py  score.py  train.py
src/mlruns/0/: meta.yaml
src/mlruns/0/4c6088b10b944609b50318be0802f6c0/: meta.yaml
src/mlruns/192299802959523595/: meta.yaml
src/mlruns/192299802959523595/0206687d0c5b4925bafe84b5b1c491fa/: meta.yaml
src/mlruns/192299802959523595/0614c0d756594314a547bd2b219374c3/: meta.yaml
src/mlruns/192299802959523595/06b9d933194745b580d6ddd31c77e33a/: meta.yaml
src/mlruns/192299802959523595/0f8f9baacfff4740a0f4007632ddf574/: meta.yaml
src/mlruns/192299802959523595/0fc0459291e84fbc9bc689925e58c228/: meta.yaml
src/mlruns/192299802959523595/147dc27b07b04fe5b673f9bab88c7cd9/: meta.yaml
src/mlruns/192299802959523595/14abcf4749004882bcfdd344f3b1f988/: meta.yaml
tests/functional_tests/: installation_test.py
tests/unit_tests/: ingest_data_test.py
(+143 files in other folders)
