[project]
name = "mle-trainingtest"
version = "0.0.1"
authors = [
  { name="Badhri Naraayanan Srinivasan", email="badhri.srinivasa@tigeranalytics.com" },
]
description = "Housing Value Prediction"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/Badhri-Naraayanan-Srinivasan/mle-training.git"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"